calico-enterprise_versioned_docs/version-3.14/reference/public-cloud/azure.mdx
---
title: Azure
description: Support for Calico Enterprise in Azure.
---

## About {{prodname}} on Azure

You can use {{prodname}} policy with one of the following networking options.

- **Azure user-defined routes**: This option provides networking without overlays.
  Disable {{prodname}} networking by setting `CALICO_NETWORKING_BACKEND` to `none`
  in `{{nodecontainer}}`. (Also called "policy-only mode".) Refer to
  [Configuring {{nodecontainer}}](../component-resources/node/configuration.mdx) and [Azure user-defined routes](#azure-user-defined-routes) for more information.

- **Calico VXLAN**: Install {{prodname}} using VXLAN encapsulation for pod traffic.
- **Azure CNI IPAM plug-in**: Configure {{prodname}} to use the
  [Azure CNI plug-in](https://github.com/Azure/azure-container-networking/blob/master/docs/cni.md)
  instead of the {{prodname}} CNI plug-in.

## Azure user-defined routes

To configure Azure user-defined routes (UDR):

- Create an [Azure route table][azureudrcreate] and
  associatе it with the VMs subnet.

- Enable [IP forwarding enabled][azureipforward] in your
  VM network interfaces.

On Kubernetes, also complete the following.

- Ensure that the selected pod's subnet is a part of your Azure virtual
  network IP range.

- Include the name of your routing table in the configuration file of your
  Kubernetes Azure cloud provider.

## Does Azure support {{prodname}} networking?

Calico in VXLAN mode is supported on Azure. However, IPIP packets are blocked by the Azure network fabric.

[azureipforward]: https://docs.microsoft.com/en-us/azure/virtual-network/virtual-network-network-interface#enable-or-disable-ip-forwarding
[azureudr]: https://docs.microsoft.com/en-us/azure/virtual-network/virtual-networks-udr-overview#user-defined
[azureudrcreate]: https://docs.microsoft.com/en-us/azure/virtual-network/create-user-defined-route-portal
